<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_partner"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/partnerPage"/>

        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/baseline_task_24"
            android:title="@string/completed_tasks"/>

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>