<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".LoginScreen">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <ImageView
        android:id="@+id/TTlogo"
        android:layout_width="399dp"
        android:layout_height="269dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/tasktogetherlogo"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ttlogo"
        app:layout_constraintBottom_toTopOf="@+id/guidelineLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/purple_primary_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineLogo"
        app:layout_constraintVertical_bias="0.532" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLineInputLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLineInputRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:maxWidth="300dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/purple_dark_color"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:inputType="text|textNoSuggestions"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineFields"
        app:layout_constraintStart_toStartOf="@id/verticalGuideLineInputLeft"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLineInputRight" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:maxWidth="300dp"
        android:autofillHints="password"
        android:backgroundTint="@color/purple_dark_color"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="@id/verticalGuideLineInputLeft"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideLineInputRight" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_dark_color"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintRight_toLeftOf="@id/verticalGuideLine"/>

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/purple_primary_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView"
        app:layout_constraintWidth_default="spread" />


</androidx.constraintlayout.widget.ConstraintLayout>
